--- a/app/src/main/res/layout/activity_my_music.xml
+++ b/app/src/main/res/layout/activity_my_music.xml
@@ -32,10 +32,12 @@
 
     </android.support.design.widget.AppBarLayout>
 
+
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="140dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <RelativeLayout
@@ -47,19 +49,23 @@
         android:background="@color/colorPrimaryDark">
         <TextView
             android:padding="5dp"
+            android:maxLines="1"
             android:id="@+id/curr_play_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
-            android:text="Current Playing"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
+            android:text="Now Playing.."/>
 
         <ImageButton
+            android:padding="20dp"
+            android:background="@color/colorPrimaryDark"
+            android:id="@+id/main_play_pauseBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@android:drawable/ic_media_play"/>
+            android:src="@drawable/ic_play_circle_filled_white_48dp"/>
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
